--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,8 @@ services:
     envVars:
     - key: SECRET_KEY
       generateValue: true
+    - key: PORT
+      value: 10000
     - key: REDIS_URL
       fromService:
         type: redis
